--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <br>
       <p>Is the Whey right for you?</p>
       <br>
-      <a class="buton-quiz" href="formulario/index.html">Take a quiz <i class="fa-solid fa-arrow-right"></i></a>
+      <a class="buton-quiz" href="quiz.html">Take a quiz <i class="fa-solid fa-arrow-right"></i></a>
       <br><br><br>
       <p>Our Members and their story</p>
     </div>
